--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-linker",
   "displayName": "GitHub Linker",
-  "description": "Make and open Links to GitHub repositories",
+  "description": "Make and Open Links to GitHub repositories",
   "version": "0.0.3",
   "publisher": "manhen",
   "license": "MIT",
@@ -11,7 +11,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ManuelHentschel/vscode-github-linker-2"
+    "url": "https://github.com/ManuelHentschel/vscode-github-linker"
+  },
+  "bugs": {
+    "url": "https://github.com/ManuelHentschel/vscode-github-linker/issues"
   },
   "engines": {
     "vscode": "^1.50.0"
