--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,3 +46,18 @@ jobs:
           prerelease: false
           draft: false 
 
+  publish:
+    name: Publish
+    timeout-minutes: 30
+    needs: release # doesn't really need these, just to make sure that packaging etc worked
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: npm install
+      - uses: lannonbr/vsce-action@master
+        with:
+          args: "publish -p $VSCE_TOKEN"
+        env:
+          VSCE_TOKEN: ${{ secrets.VSCE_TOKEN }}
+
+
