--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,51 +5,52 @@ name: release
 
 on:
   push:
-    tags: ["v*"]
+    branches: ["master"]
+    # tags: ["v*"]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: npm install
-      - uses: lannonbr/vsce-action@master
-        with:
-          args: "package"
-      - name: Identify output file # can be retrieved as steps.filenames.outputs.file_out
-        id: filenames
-        run: echo "::set-output name=file_out::$(ls | grep "\.vsix$" | head -1)"
-      - uses: actions/upload-artifact@v1
-        with:
-          name: ${{ steps.filenames.outputs.file_out }}
-          path: ${{ steps.filenames.outputs.file_out }}
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: npm install
+  #     - uses: lannonbr/vsce-action@master
+  #       with:
+  #         args: "package"
+  #     - name: Identify output file # can be retrieved as steps.filenames.outputs.file_out
+  #       id: filenames
+  #       run: echo "::set-output name=file_out::$(ls | grep "\.vsix$" | head -1)"
+  #     - uses: actions/upload-artifact@v1
+  #       with:
+  #         name: ${{ steps.filenames.outputs.file_out }}
+  #         path: ${{ steps.filenames.outputs.file_out }}
 
-  release:
-    name: Release
-    timeout-minutes: 30
-    needs: build
-    runs-on: ubuntu-latest
+  # release:
+  #   name: Release
+  #   timeout-minutes: 30
+  #   needs: build
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
-        with:
-          path: "artifacts/"
-      - name: Get version from tag
-        id: get_version
-        run: echo ::set-output name=version::${GITHUB_REF/refs\/tags\/v/}
-      - name: Create release
-        uses: marvinpinto/action-automatic-releases@latest
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          files: "artifacts/*/*"
-          prerelease: false
-          draft: false 
+  #   steps:
+  #     - name: Download artifacts
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         path: "artifacts/"
+  #     - name: Get version from tag
+  #       id: get_version
+  #       run: echo ::set-output name=version::${GITHUB_REF/refs\/tags\/v/}
+  #     - name: Create release
+  #       uses: marvinpinto/action-automatic-releases@latest
+  #       with:
+  #         repo_token: ${{ secrets.GITHUB_TOKEN }}
+  #         files: "artifacts/*/*"
+  #         prerelease: false
+  #         draft: false 
 
   publish:
     name: Publish
     timeout-minutes: 30
-    needs: release # doesn't really need these, just to make sure that packaging etc worked
+    # needs: release # doesn't really need these, just to make sure that packaging etc worked
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
