--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,7 @@
 			"label": "Package and install Extension",
 			"type": "shell",
 			"problemMatcher": [],
-			"command": "vsce package -o ${workspaceFolderBasename}.vsix && code-insiders --install-extension ${workspaceFolderBasename}.vsix --force",
+			"command": "vsce package -o ${workspaceFolderBasename}.vsix && code --install-extension ${workspaceFolderBasename}.vsix --force",
 			"group": {
 				"kind": "build",
 				"isDefault": true
