--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,16 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "ES6",
+		"target": "es2018",
 		"outDir": "out",
 		"lib": [
-			// "ESNext",
-			"es6",
-			"dom"
+			"es2018"
 		],
 		"sourceMap": true,
 		"rootDir": "src",
-		// "strict": true   /* enable all strict type-checking options */
+		"strict": true,   /* enable all strict type-checking options */
 		/* Additional Checks */
+        "strictNullChecks": true,
 		"noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		"noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
