--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "github-linker",
   "displayName": "GitHub Linker",
   "description": "Make and Open Links to GitHub repositories",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "publisher": "manhen",
   "license": "MIT",
   "icon": "img/icon.png",
   "extensionKind": [
     "ui",
     "workspace"
+  ],
+  "extensionDependencies": [
+    "vscode.git"
   ],
   "author": {
     "name": "Manuel Hentschel"
