--- a/package.json
+++ b/package.json
@@ -197,9 +197,7 @@
     "vscode:prepublish": "tsc -p .",
     "compile": "tsc -p .",
     "lint": "eslint src --ext ts",
-    "watch": "tsc --watch -p .",
-    "pretest": "npm run compile && npm run lint",
-    "test": "node ./out/test/runTest.js"
+    "watch": "tsc --watch -p ."
   },
   "bla": {
     "@types/node": "^13.13.27",
