--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
           args: "package"
       - name: Identify output file # can be retrieved as steps.filenames.outputs.file_out
         id: filenames
-        run: echo "::set-output name=file_out::$(ls | grep "\.vsix$" | head -1)"
+        run: echo "file_out=$(ls | grep "\.vsix$" | head -1)" >> $GITHUB_OUTPUT
       - uses: actions/upload-artifact@v4
         with:
           name: ${{ steps.filenames.outputs.file_out }}
@@ -37,7 +37,7 @@ jobs:
           path: "artifacts/"
       - name: Get version from tag
         id: get_version
-        run: echo ::set-output name=version::${GITHUB_REF/refs\/tags\/v/}
+        run: echo "version=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_OUTPUT
       - name: Create release
         uses: marvinpinto/action-automatic-releases@latest
         with:
